--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "phoenix_html": "file:deps/phoenix_html"
   },
   "devDependencies": {
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
     "material-design-lite": "^1.3.0",
+    "style-loader": "^0.18.2",
     "webpack": "^3.1.0"
   },
   "name": "yt_comments",
