--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "phoenix_html": "file:deps/phoenix_html"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
+    "jsx-loader": "^0.13.2",
     "material-design-lite": "^1.3.0",
+    "mobx": "^3.2.0",
+    "mobx-react": "^4.2.2",
+    "mobx-react-devtools": "^4.2.15",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.1.0"
   },
