--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.6",
+    "request-promise-lite": "^0.8.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.1.0"
   },
